Fixed nav bar tablet alignment

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -17,6 +17,7 @@
   align-items: center;
   color: $dark-grey;
   text-transform: uppercase;
+  min-height: 8vh;
 
   .logo,
   .logo a {
@@ -76,14 +77,14 @@
     .nav-links {
       position: absolute;
       right: 0px;
-      height: 94vh;
+      height: 96vh;
       top: 6vh;
       background-color: $white;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
-      width: 50%;
+      width: 30%;
       transform: translateX(100%);
       transition: transform 0.3s ease-in;
     }
